--- a/ChatApp/Properties/launchSettings.json
+++ b/ChatApp/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:21020",
+      "applicationUrl": "http://0.0.0.0:21020",
       "sslPort": 44359
     }
   },
@@ -18,7 +18,7 @@
     "ChatApp": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "https://0.0.0.0:5001;http://0.0.0.0:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
