Moving to port 80 for docker

--- a/ChatApp/Properties/launchSettings.json
+++ b/ChatApp/Properties/launchSettings.json
@@ -1,27 +1,27 @@
 ﻿{
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://0.0.0.0:21020",
-      "sslPort": 44359
-    }
-  },
-  "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+    "iisSettings": {
+        "windowsAuthentication": false,
+        "anonymousAuthentication": true,
+        "iisExpress": {
+            "applicationUrl": "http://0.0.0.0:21020",
+            "sslPort": 44359
+        }
     },
-    "ChatApp": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "applicationUrl": "https://0.0.0.0:5001;http://0.0.0.0:5000",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+    "profiles": {
+        "IIS Express": {
+            "commandName": "IISExpress",
+            "launchBrowser": true,
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            }
+        },
+        "ChatApp": {
+            "commandName": "Project",
+            "launchBrowser": true,
+            "applicationUrl": "https://0.0.0.0:80;https://0.0.0.0:443",
+            "environmentVariables": {
+                "ASPNETCORE_ENVIRONMENT": "Development"
+            }
+        }
     }
-  }
 }
