--- a/ChatApp/Properties/launchSettings.json
+++ b/ChatApp/Properties/launchSettings.json
@@ -18,7 +18,7 @@
         "ChatApp": {
             "commandName": "Project",
             "launchBrowser": true,
-            "applicationUrl": "https://0.0.0.0:80;https://0.0.0.0:81",
+            "applicationUrl": "https://0.0.0.0:443;http://0.0.0.0:80",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             }
